fix: замена gap флекбокса на внешний отступ элементов

--- a/src/components/performance-details/performance-details.module.css
+++ b/src/components/performance-details/performance-details.module.css
@@ -4,12 +4,12 @@
 
   display: flex;
   margin-bottom: scale(18px);
-  gap: scale(33px);
   line-height: scale(36px);
 }
 
 .ageLimit {
   position: relative;
+  margin-left: scale(33px);
 }
 
 .ageLimit::before {
